y.output
Terminals unused in grammar

   STRUCT
   TYPEDEF
   UNION
   ENUMERATION_CONST
   HASH


Grammar

    0 $accept: translation_unit $end

    1 M: %empty

    2 N: %empty

    3 primary_expression: ID
    4                   | INTEGER_CONST
    5                   | FLOAT_CONST
    6                   | CHAR_CONST
    7                   | STRING_LITERAL
    8                   | LPARENTHESIS expression RPARENTHESIS

    9 postfix_expression: primary_expression
   10                   | postfix_expression LBRACKET expression RBRACKET
   11                   | postfix_expression LPARENTHESIS argument_expression_list_opt RPARENTHESIS
   12                   | postfix_expression DOT ID
   13                   | postfix_expression ARROW ID
   14                   | postfix_expression INCREMENT
   15                   | postfix_expression DECREMENT
   16                   | LPARENTHESIS type_name RPARENTHESIS LBRACE initializer_list RBRACE
   17                   | LPARENTHESIS type_name RPARENTHESIS LBRACE initializer_list COMMA RBRACE

   18 argument_expression_list_opt: %empty
   19                             | argument_expression_list

   20 argument_expression_list: assignment_expression
   21                         | argument_expression_list COMMA assignment_expression

   22 unary_expression: postfix_expression
   23                 | INCREMENT unary_expression
   24                 | DECREMENT unary_expression
   25                 | unary_operator cast_expression
   26                 | SIZEOF unary_expression
   27                 | SIZEOF LPARENTHESIS type_name RPARENTHESIS

   28 unary_operator: AMPERSAND
   29               | STAR
   30               | PLUS
   31               | MINUS
   32               | BITWISE_NOT
   33               | LOGICAL_NOT

   34 cast_expression: unary_expression
   35                | LPARENTHESIS type_name RPARENTHESIS cast_expression

   36 multiplicative_expression: cast_expression
   37                          | multiplicative_expression STAR cast_expression
   38                          | multiplicative_expression DIV cast_expression
   39                          | multiplicative_expression MOD cast_expression

   40 additive_expression: multiplicative_expression
   41                    | additive_expression PLUS multiplicative_expression
   42                    | additive_expression MINUS multiplicative_expression

   43 shift_expression: additive_expression
   44                 | shift_expression LEFT_SHIFT additive_expression
   45                 | shift_expression RIGHT_SHIFT additive_expression

   46 relational_expression: shift_expression
   47                      | relational_expression LESSER_THAN shift_expression
   48                      | relational_expression GREATER_THAN shift_expression
   49                      | relational_expression LESSER_EQUAL shift_expression
   50                      | relational_expression GREATER_EQUAL shift_expression

   51 equality_expression: relational_expression
   52                    | equality_expression EQUALS relational_expression
   53                    | equality_expression NOT_EQUAL relational_expression

   54 AND_expression: equality_expression
   55               | AND_expression AMPERSAND equality_expression

   56 exclusive_OR_expression: AND_expression
   57                        | exclusive_OR_expression BITWISE_XOR AND_expression

   58 inclusive_OR_expression: exclusive_OR_expression
   59                        | inclusive_OR_expression BITWISE_OR exclusive_OR_expression

   60 logical_AND_expression: inclusive_OR_expression
   61                       | logical_AND_expression N LOGICAL_AND M inclusive_OR_expression

   62 logical_OR_expression: logical_AND_expression
   63                      | logical_OR_expression N LOGICAL_OR M logical_AND_expression

   64 conditional_expression: logical_OR_expression
   65                       | logical_OR_expression N QUESTION_MARK M expression N COLON M conditional_expression

   66 assignment_expression: conditional_expression
   67                      | unary_expression assignment_operator assignment_expression

   68 assignment_operator: ASSIGNMENT
   69                    | MULT_ASSIGN
   70                    | DIV_ASSIGN
   71                    | MOD_ASSIGN
   72                    | PLUS_ASSIGN
   73                    | SUB_ASSIGN
   74                    | LEFT_SHIFT_ASSIGN
   75                    | RIGHT_SHIFT_ASSIGN
   76                    | AND_ASSIGN
   77                    | XOR_ASSIGN
   78                    | OR_ASSIGN

   79 expression: assignment_expression
   80           | expression COMMA assignment_expression

   81 constant_expression: conditional_expression

   82 declaration: declaration_specifiers init_declarator_list SEMICOLON
   83            | declaration_specifiers SEMICOLON

   84 declaration_specifiers: storage_class_specifier declaration_specifiers
   85                       | storage_class_specifier
   86                       | type_specifier declaration_specifiers
   87                       | type_specifier
   88                       | type_qualifier declaration_specifiers
   89                       | type_qualifier
   90                       | function_specifier declaration_specifiers
   91                       | function_specifier

   92 init_declarator_list: init_declarator
   93                     | init_declarator_list COMMA init_declarator

   94 init_declarator: declarator
   95                | declarator ASSIGNMENT initializer

   96 storage_class_specifier: EXTERN
   97                        | STATIC
   98                        | AUTO
   99                        | REGISTER

  100 type_specifier: VOID
  101               | CHAR
  102               | SHORT
  103               | INT
  104               | LONG
  105               | FLOAT
  106               | DOUBLE
  107               | SIGNED
  108               | UNSIGNED
  109               | BOOL
  110               | COMPLEX
  111               | IMAGINARY
  112               | enum_specifier

  113 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
  114                         | type_qualifier specifier_qualifier_list_opt

  115 specifier_qualifier_list_opt: %empty
  116                             | specifier_qualifier_list

  117 enum_specifier: ENUM identifier_opt LBRACE enumerator_list RBRACE
  118               | ENUM identifier_opt LBRACE enumerator_list COMMA RBRACE
  119               | ENUM ID

  120 identifier_opt: %empty
  121               | ID

  122 enumerator_list: enumerator
  123                | enumerator_list COMMA enumerator

  124 enumerator: ID
  125           | ID ASSIGNMENT constant_expression

  126 type_qualifier: CONST
  127               | RESTRICT
  128               | VOLATILE

  129 function_specifier: INLINE

  130 declarator: pointer direct_declarator
  131           | direct_declarator

  132 direct_declarator: ID
  133                  | LPARENTHESIS declarator RPARENTHESIS
  134                  | direct_declarator LBRACKET type_qualifier_list assignment_expression RBRACKET
  135                  | direct_declarator LBRACKET type_qualifier_list RBRACKET
  136                  | direct_declarator LBRACKET assignment_expression RBRACKET
  137                  | direct_declarator LBRACKET RBRACKET
  138                  | direct_declarator LBRACKET STATIC type_qualifier_list assignment_expression RBRACKET
  139                  | direct_declarator LBRACKET STATIC assignment_expression RBRACKET
  140                  | direct_declarator LBRACKET type_qualifier_list STAR RBRACKET
  141                  | direct_declarator LBRACKET STAR RBRACKET
  142                  | direct_declarator LPARENTHESIS changetable parameter_type_list RPARENTHESIS
  143                  | direct_declarator LPARENTHESIS identifier_list RPARENTHESIS
  144                  | direct_declarator LPARENTHESIS changetable RPARENTHESIS

  145 changetable: %empty

  146 type_qualifier_list_opt: %empty
  147                        | type_qualifier_list

  148 pointer: STAR type_qualifier_list_opt
  149        | STAR type_qualifier_list_opt pointer

  150 type_qualifier_list: type_qualifier
  151                    | type_qualifier_list type_qualifier

  152 parameter_type_list: parameter_list
  153                    | parameter_list COMMA ELLIPSIS

  154 parameter_list: parameter_declaration
  155               | parameter_list COMMA parameter_declaration

  156 parameter_declaration: declaration_specifiers declarator
  157                      | declaration_specifiers

  158 identifier_list: ID
  159                | identifier_list COMMA ID

  160 type_name: specifier_qualifier_list

  161 initializer: assignment_expression
  162            | LBRACE initializer_list RBRACE
  163            | LBRACE initializer_list COMMA RBRACE

  164 initializer_list: designation_opt initializer
  165                 | initializer_list COMMA designation_opt initializer

  166 designation_opt: %empty
  167                | designation

  168 designation: designator_list ASSIGNMENT

  169 designator_list: designator
  170                | designator_list designator

  171 designator: LBRACKET constant_expression RBRACKET
  172           | DOT ID

  173 statement: labeled_statement
  174          | compound_statement
  175          | expression_statement
  176          | selection_statement
  177          | iteration_statement
  178          | jump_statement

  179 labeled_statement: ID COLON statement
  180                  | CASE constant_expression COLON statement
  181                  | DEFAULT COLON statement

  182 compound_statement: LBRACE block_item_list_opt RBRACE

  183 block_item_list_opt: %empty
  184                    | block_item_list

  185 block_item_list: block_item
  186                | block_item_list M block_item

  187 block_item: declaration
  188           | statement

  189 expression_statement: expression SEMICOLON
  190                     | SEMICOLON

  191 selection_statement: IF LPARENTHESIS expression N RPARENTHESIS M statement N
  192                    | IF LPARENTHESIS expression N RPARENTHESIS M statement N ELSE M statement
  193                    | SWITCH LPARENTHESIS expression RPARENTHESIS statement

  194 iteration_statement: WHILE M LPARENTHESIS expression RPARENTHESIS M statement
  195                    | DO M statement M WHILE LPARENTHESIS expression RPARENTHESIS SEMICOLON
  196                    | FOR LPARENTHESIS expression_statement M expression_statement RPARENTHESIS M statement
  197                    | FOR LPARENTHESIS expression_statement M expression_statement M expression N RPARENTHESIS M statement

  198 jump_statement: GOTO ID SEMICOLON
  199               | CONTINUE SEMICOLON
  200               | BREAK SEMICOLON
  201               | RETURN expression SEMICOLON
  202               | RETURN SEMICOLON

  203 translation_unit: external_declaration
  204                 | translation_unit external_declaration

  205 external_declaration: function_definition
  206                     | declaration

  207 function_definition: declaration_specifiers declarator declaration_list_opt changetable compound_statement

  208 declaration_list: declaration
  209                 | declaration_list declaration

  210 declaration_list_opt: %empty
  211                     | declaration_list


Terminals, with rules where they appear

$end (0) 0
error (256)
AUTO (258) 98
BREAK (259) 200
CASE (260) 180
CHAR (261) 101
CONST (262) 126
CONTINUE (263) 199
DEFAULT (264) 181
DO (265) 195
DOUBLE (266) 106
ELSE (267) 192
ENUM (268) 117 118 119
EXTERN (269) 96
FLOAT (270) 105
FOR (271) 196 197
GOTO (272) 198
IF (273) 191 192
INLINE (274) 129
INT (275) 103
LONG (276) 104
REGISTER (277) 99
RESTRICT (278) 127
RETURN (279) 201 202
SHORT (280) 102
SIGNED (281) 107
SIZEOF (282) 26 27
STATIC (283) 97 138 139
STRUCT (284)
SWITCH (285) 193
TYPEDEF (286)
UNION (287)
UNSIGNED (288) 108
VOID (289) 100
VOLATILE (290) 128
WHILE (291) 194 195
BOOL (292) 109
COMPLEX (293) 110
IMAGINARY (294) 111
ID (295) 3 12 13 119 121 124 125 132 158 159 172 179 198
INTEGER_CONST (296) 4
FLOAT_CONST (297) 5
ENUMERATION_CONST (298)
CHAR_CONST (299) 6
STRING_LITERAL (300) 7
LBRACKET (301) 10 134 135 136 137 138 139 140 141 171
RBRACKET (302) 10 134 135 136 137 138 139 140 141 171
LBRACE (303) 16 17 117 118 162 163 182
RBRACE (304) 16 17 117 118 162 163 182
LPARENTHESIS (305) 8 11 16 17 27 35 133 142 143 144 191 192 193 194
    195 196 197
RPARENTHESIS (306) 8 11 16 17 27 35 133 142 143 144 191 192 193 194
    195 196 197
DOT (307) 12 172
ARROW (308) 13
INCREMENT (309) 14 23
DECREMENT (310) 15 24
AMPERSAND (311) 28 55
BITWISE_OR (312) 59
BITWISE_XOR (313) 57
PLUS (314) 30 41
MINUS (315) 31 42
STAR (316) 29 37 140 141 148 149
DIV (317) 38
MOD (318) 39
BITWISE_NOT (319) 32
LOGICAL_NOT (320) 33
LOGICAL_AND (321) 61
LOGICAL_OR (322) 63
RIGHT_SHIFT (323) 45
LEFT_SHIFT (324) 44
LESSER_THAN (325) 47
GREATER_THAN (326) 48
LESSER_EQUAL (327) 49
GREATER_EQUAL (328) 50
EQUALS (329) 52
NOT_EQUAL (330) 53
QUESTION_MARK (331) 65
COLON (332) 65 179 180 181
SEMICOLON (333) 82 83 189 190 195 198 199 200 201 202
ELLIPSIS (334) 153
ASSIGNMENT (335) 68 95 125 168
MULT_ASSIGN (336) 69
DIV_ASSIGN (337) 70
PLUS_ASSIGN (338) 72
SUB_ASSIGN (339) 73
MOD_ASSIGN (340) 71
LEFT_SHIFT_ASSIGN (341) 74
RIGHT_SHIFT_ASSIGN (342) 75
AND_ASSIGN (343) 76
XOR_ASSIGN (344) 77
OR_ASSIGN (345) 78
COMMA (346) 17 21 80 93 118 123 153 155 159 163 165
HASH (347)
"then" (348)


Nonterminals, with rules where they appear

$accept (94)
    on left: 0
M (95)
    on left: 1, on right: 61 63 65 186 191 192 194 195 196 197
N (96)
    on left: 2, on right: 61 63 65 191 192 197
primary_expression (97)
    on left: 3 4 5 6 7 8, on right: 9
postfix_expression (98)
    on left: 9 10 11 12 13 14 15 16 17, on right: 10 11 12 13 14 15
    22
argument_expression_list_opt (99)
    on left: 18 19, on right: 11
argument_expression_list (100)
    on left: 20 21, on right: 19 21
unary_expression (101)
    on left: 22 23 24 25 26 27, on right: 23 24 26 34 67
unary_operator (102)
    on left: 28 29 30 31 32 33, on right: 25
cast_expression (103)
    on left: 34 35, on right: 25 35 36 37 38 39
multiplicative_expression (104)
    on left: 36 37 38 39, on right: 37 38 39 40 41 42
additive_expression (105)
    on left: 40 41 42, on right: 41 42 43 44 45
shift_expression (106)
    on left: 43 44 45, on right: 44 45 46 47 48 49 50
relational_expression (107)
    on left: 46 47 48 49 50, on right: 47 48 49 50 51 52 53
equality_expression (108)
    on left: 51 52 53, on right: 52 53 54 55
AND_expression (109)
    on left: 54 55, on right: 55 56 57
exclusive_OR_expression (110)
    on left: 56 57, on right: 57 58 59
inclusive_OR_expression (111)
    on left: 58 59, on right: 59 60 61
logical_AND_expression (112)
    on left: 60 61, on right: 61 62 63
logical_OR_expression (113)
    on left: 62 63, on right: 63 64 65
conditional_expression (114)
    on left: 64 65, on right: 65 66 81
assignment_expression (115)
    on left: 66 67, on right: 20 21 67 79 80 134 136 138 139 161
assignment_operator (116)
    on left: 68 69 70 71 72 73 74 75 76 77 78, on right: 67
expression (117)
    on left: 79 80, on right: 8 10 65 80 189 191 192 193 194 195 197
    201
constant_expression (118)
    on left: 81, on right: 125 171 180
declaration (119)
    on left: 82 83, on right: 187 206 208 209
declaration_specifiers (120)
    on left: 84 85 86 87 88 89 90 91, on right: 82 83 84 86 88 90 156
    157 207
init_declarator_list (121)
    on left: 92 93, on right: 82 93
init_declarator (122)
    on left: 94 95, on right: 92 93
storage_class_specifier (123)
    on left: 96 97 98 99, on right: 84 85
type_specifier (124)
    on left: 100 101 102 103 104 105 106 107 108 109 110 111 112, on right:
    86 87 113
specifier_qualifier_list (125)
    on left: 113 114, on right: 116 160
specifier_qualifier_list_opt (126)
    on left: 115 116, on right: 113 114
enum_specifier (127)
    on left: 117 118 119, on right: 112
identifier_opt (128)
    on left: 120 121, on right: 117 118
enumerator_list (129)
    on left: 122 123, on right: 117 118 123
enumerator (130)
    on left: 124 125, on right: 122 123
type_qualifier (131)
    on left: 126 127 128, on right: 88 89 114 150 151
function_specifier (132)
    on left: 129, on right: 90 91
declarator (133)
    on left: 130 131, on right: 94 95 133 156 207
direct_declarator (134)
    on left: 132 133 134 135 136 137 138 139 140 141 142 143 144, on right:
    130 131 134 135 136 137 138 139 140 141 142 143 144
changetable (135)
    on left: 145, on right: 142 144 207
type_qualifier_list_opt (136)
    on left: 146 147, on right: 148 149
pointer (137)
    on left: 148 149, on right: 130 149
type_qualifier_list (138)
    on left: 150 151, on right: 134 135 138 140 147 151
parameter_type_list (139)
    on left: 152 153, on right: 142
parameter_list (140)
    on left: 154 155, on right: 152 153 155
parameter_declaration (141)
    on left: 156 157, on right: 154 155
identifier_list (142)
    on left: 158 159, on right: 143 159
type_name (143)
    on left: 160, on right: 16 17 27 35
initializer (144)
    on left: 161 162 163, on right: 95 164 165
initializer_list (145)
    on left: 164 165, on right: 16 17 162 163 165
designation_opt (146)
    on left: 166 167, on right: 164 165
designation (147)
    on left: 168, on right: 167
designator_list (148)
    on left: 169 170, on right: 168 170
designator (149)
    on left: 171 172, on right: 169 170
statement (150)
    on left: 173 174 175 176 177 178, on right: 179 180 181 188 191
    192 193 194 195 196 197
labeled_statement (151)
    on left: 179 180 181, on right: 173
compound_statement (152)
    on left: 182, on right: 174 207
block_item_list_opt (153)
    on left: 183 184, on right: 182
block_item_list (154)
    on left: 185 186, on right: 184 186
block_item (155)
    on left: 187 188, on right: 185 186
expression_statement (156)
    on left: 189 190, on right: 175 196 197
selection_statement (157)
    on left: 191 192 193, on right: 176
iteration_statement (158)
    on left: 194 195 196 197, on right: 177
jump_statement (159)
    on left: 198 199 200 201 202, on right: 178
translation_unit (160)
    on left: 203 204, on right: 0 204
external_declaration (161)
    on left: 205 206, on right: 203 204
function_definition (162)
    on left: 207, on right: 205
declaration_list (163)
    on left: 208 209, on right: 209 211
declaration_list_opt (164)
    on left: 210 211, on right: 207


State 0

    0 $accept: . translation_unit $end

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    translation_unit         go to state 29
    external_declaration     go to state 30
    function_definition      go to state 31


State 1

   98 storage_class_specifier: AUTO .

    $default  reduce using rule 98 (storage_class_specifier)


State 2

  101 type_specifier: CHAR .

    $default  reduce using rule 101 (type_specifier)


State 3

  126 type_qualifier: CONST .

    $default  reduce using rule 126 (type_qualifier)


State 4

  106 type_specifier: DOUBLE .

    $default  reduce using rule 106 (type_specifier)


State 5

  117 enum_specifier: ENUM . identifier_opt LBRACE enumerator_list RBRACE
  118               | ENUM . identifier_opt LBRACE enumerator_list COMMA RBRACE
  119               | ENUM . ID

    ID  shift, and go to state 32

    $default  reduce using rule 120 (identifier_opt)

    identifier_opt  go to state 33


State 6

   96 storage_class_specifier: EXTERN .

    $default  reduce using rule 96 (storage_class_specifier)


State 7

  105 type_specifier: FLOAT .

    $default  reduce using rule 105 (type_specifier)


State 8

  129 function_specifier: INLINE .

    $default  reduce using rule 129 (function_specifier)


State 9

  103 type_specifier: INT .

    $default  reduce using rule 103 (type_specifier)


State 10

  104 type_specifier: LONG .

    $default  reduce using rule 104 (type_specifier)


State 11

   99 storage_class_specifier: REGISTER .

    $default  reduce using rule 99 (storage_class_specifier)


State 12

  127 type_qualifier: RESTRICT .

    $default  reduce using rule 127 (type_qualifier)


State 13

  102 type_specifier: SHORT .

    $default  reduce using rule 102 (type_specifier)


State 14

  107 type_specifier: SIGNED .

    $default  reduce using rule 107 (type_specifier)


State 15

   97 storage_class_specifier: STATIC .

    $default  reduce using rule 97 (storage_class_specifier)


State 16

  108 type_specifier: UNSIGNED .

    $default  reduce using rule 108 (type_specifier)


State 17

  100 type_specifier: VOID .

    $default  reduce using rule 100 (type_specifier)


State 18

  128 type_qualifier: VOLATILE .

    $default  reduce using rule 128 (type_qualifier)


State 19

  109 type_specifier: BOOL .

    $default  reduce using rule 109 (type_specifier)


State 20

  110 type_specifier: COMPLEX .

    $default  reduce using rule 110 (type_specifier)


State 21

  111 type_specifier: IMAGINARY .

    $default  reduce using rule 111 (type_specifier)


State 22

  206 external_declaration: declaration .

    $default  reduce using rule 206 (external_declaration)


State 23

   82 declaration: declaration_specifiers . init_declarator_list SEMICOLON
   83            | declaration_specifiers . SEMICOLON
  207 function_definition: declaration_specifiers . declarator declaration_list_opt changetable compound_statement

    ID            shift, and go to state 34
    LPARENTHESIS  shift, and go to state 35
    STAR          shift, and go to state 36
    SEMICOLON     shift, and go to state 37

    init_declarator_list  go to state 38
    init_declarator       go to state 39
    declarator            go to state 40
    direct_declarator     go to state 41
    pointer               go to state 42


State 24

   84 declaration_specifiers: storage_class_specifier . declaration_specifiers
   85                       | storage_class_specifier .

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 85 (declaration_specifiers)

    declaration_specifiers   go to state 43
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 25

   86 declaration_specifiers: type_specifier . declaration_specifiers
   87                       | type_specifier .

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 87 (declaration_specifiers)

    declaration_specifiers   go to state 44
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 26

  112 type_specifier: enum_specifier .

    $default  reduce using rule 112 (type_specifier)


State 27

   88 declaration_specifiers: type_qualifier . declaration_specifiers
   89                       | type_qualifier .

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 89 (declaration_specifiers)

    declaration_specifiers   go to state 45
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 28

   90 declaration_specifiers: function_specifier . declaration_specifiers
   91                       | function_specifier .

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 91 (declaration_specifiers)

    declaration_specifiers   go to state 46
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 29

    0 $accept: translation_unit . $end
  204 translation_unit: translation_unit . external_declaration

    $end       shift, and go to state 47
    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    external_declaration     go to state 48
    function_definition      go to state 31


State 30

  203 translation_unit: external_declaration .

    $default  reduce using rule 203 (translation_unit)


State 31

  205 external_declaration: function_definition .

    $default  reduce using rule 205 (external_declaration)


State 32

  119 enum_specifier: ENUM ID .
  121 identifier_opt: ID .

    LBRACE    reduce using rule 121 (identifier_opt)
    $default  reduce using rule 119 (enum_specifier)


State 33

  117 enum_specifier: ENUM identifier_opt . LBRACE enumerator_list RBRACE
  118               | ENUM identifier_opt . LBRACE enumerator_list COMMA RBRACE

    LBRACE  shift, and go to state 49


State 34

  132 direct_declarator: ID .

    $default  reduce using rule 132 (direct_declarator)


State 35

  133 direct_declarator: LPARENTHESIS . declarator RPARENTHESIS

    ID            shift, and go to state 34
    LPARENTHESIS  shift, and go to state 35
    STAR          shift, and go to state 36

    declarator         go to state 50
    direct_declarator  go to state 41
    pointer            go to state 42


State 36

  148 pointer: STAR . type_qualifier_list_opt
  149        | STAR . type_qualifier_list_opt pointer

    CONST     shift, and go to state 3
    RESTRICT  shift, and go to state 12
    VOLATILE  shift, and go to state 18

    $default  reduce using rule 146 (type_qualifier_list_opt)

    type_qualifier           go to state 51
    type_qualifier_list_opt  go to state 52
    type_qualifier_list      go to state 53


State 37

   83 declaration: declaration_specifiers SEMICOLON .

    $default  reduce using rule 83 (declaration)


State 38

   82 declaration: declaration_specifiers init_declarator_list . SEMICOLON
   93 init_declarator_list: init_declarator_list . COMMA init_declarator

    SEMICOLON  shift, and go to state 54
    COMMA      shift, and go to state 55


State 39

   92 init_declarator_list: init_declarator .

    $default  reduce using rule 92 (init_declarator_list)


State 40

   94 init_declarator: declarator .
   95                | declarator . ASSIGNMENT initializer
  207 function_definition: declaration_specifiers declarator . declaration_list_opt changetable compound_statement

    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOAT       shift, and go to state 7
    INLINE      shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    REGISTER    shift, and go to state 11
    RESTRICT    shift, and go to state 12
    SHORT       shift, and go to state 13
    SIGNED      shift, and go to state 14
    STATIC      shift, and go to state 15
    UNSIGNED    shift, and go to state 16
    VOID        shift, and go to state 17
    VOLATILE    shift, and go to state 18
    BOOL        shift, and go to state 19
    COMPLEX     shift, and go to state 20
    IMAGINARY   shift, and go to state 21
    ASSIGNMENT  shift, and go to state 56

    LBRACE    reduce using rule 210 (declaration_list_opt)
    $default  reduce using rule 94 (init_declarator)

    declaration              go to state 57
    declaration_specifiers   go to state 58
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    declaration_list         go to state 59
    declaration_list_opt     go to state 60


State 41

  131 declarator: direct_declarator .
  134 direct_declarator: direct_declarator . LBRACKET type_qualifier_list assignment_expression RBRACKET
  135                  | direct_declarator . LBRACKET type_qualifier_list RBRACKET
  136                  | direct_declarator . LBRACKET assignment_expression RBRACKET
  137                  | direct_declarator . LBRACKET RBRACKET
  138                  | direct_declarator . LBRACKET STATIC type_qualifier_list assignment_expression RBRACKET
  139                  | direct_declarator . LBRACKET STATIC assignment_expression RBRACKET
  140                  | direct_declarator . LBRACKET type_qualifier_list STAR RBRACKET
  141                  | direct_declarator . LBRACKET STAR RBRACKET
  142                  | direct_declarator . LPARENTHESIS changetable parameter_type_list RPARENTHESIS
  143                  | direct_declarator . LPARENTHESIS identifier_list RPARENTHESIS
  144                  | direct_declarator . LPARENTHESIS changetable RPARENTHESIS

    LBRACKET      shift, and go to state 61
    LPARENTHESIS  shift, and go to state 62

    $default  reduce using rule 131 (declarator)


State 42

  130 declarator: pointer . direct_declarator

    ID            shift, and go to state 34
    LPARENTHESIS  shift, and go to state 35

    direct_declarator  go to state 63


State 43

   84 declaration_specifiers: storage_class_specifier declaration_specifiers .

    $default  reduce using rule 84 (declaration_specifiers)


State 44

   86 declaration_specifiers: type_specifier declaration_specifiers .

    $default  reduce using rule 86 (declaration_specifiers)


State 45

   88 declaration_specifiers: type_qualifier declaration_specifiers .

    $default  reduce using rule 88 (declaration_specifiers)


State 46

   90 declaration_specifiers: function_specifier declaration_specifiers .

    $default  reduce using rule 90 (declaration_specifiers)


State 47

    0 $accept: translation_unit $end .

    $default  accept


State 48

  204 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 204 (translation_unit)


State 49

  117 enum_specifier: ENUM identifier_opt LBRACE . enumerator_list RBRACE
  118               | ENUM identifier_opt LBRACE . enumerator_list COMMA RBRACE

    ID  shift, and go to state 64

    enumerator_list  go to state 65
    enumerator       go to state 66


State 50

  133 direct_declarator: LPARENTHESIS declarator . RPARENTHESIS

    RPARENTHESIS  shift, and go to state 67


State 51

  150 type_qualifier_list: type_qualifier .

    $default  reduce using rule 150 (type_qualifier_list)


State 52

  148 pointer: STAR type_qualifier_list_opt .
  149        | STAR type_qualifier_list_opt . pointer

    STAR  shift, and go to state 36

    $default  reduce using rule 148 (pointer)

    pointer  go to state 68


State 53

  147 type_qualifier_list_opt: type_qualifier_list .
  151 type_qualifier_list: type_qualifier_list . type_qualifier

    CONST     shift, and go to state 3
    RESTRICT  shift, and go to state 12
    VOLATILE  shift, and go to state 18

    $default  reduce using rule 147 (type_qualifier_list_opt)

    type_qualifier  go to state 69


State 54

   82 declaration: declaration_specifiers init_declarator_list SEMICOLON .

    $default  reduce using rule 82 (declaration)


State 55
